@@ -107,8 +107,8 @@ dependencies {
     implementation("javax.cache:cache-api:1.1.1")
     implementation("com.google.guava:guava:32.1.3-jre")
     implementation("com.mailjet:mailjet-client:5.2.5")
-    implementation("org.flywaydb:flyway-core:10.1.0")
-    implementation("org.flywaydb:flyway-database-postgresql:10.1.0")
+    implementation("org.flywaydb:flyway-core:10.2.0")
+    implementation("org.flywaydb:flyway-database-postgresql:10.2.0")
     implementation("org.apache.solr:solr-solrj:9.4.0")
     implementation("net.sf.webdav-servlet:webdav-servlet:3.0.0-INFONL")
     implementation("com.itextpdf:itextpdf:5.5.13.3")
@@ -448,6 +448,10 @@ tasks {
         classpath = sourceSets["itest"].runtimeClasspath
 
         systemProperty("zacDockerImage", zacDockerImage)
+        // note that the PATCH (and PUT?) HTTP requests in the integration tests currently
+        // require the following environment variable to be set
+        // see: https://github.com/lojewalo/khttp/issues/88
+        environment("JAVA_TOOL_OPTIONS", "--add-opens=java.base/java.net=ALL-UNNAMED")
     }
 
     register<Exec>("generateWildflyBootableJar") {
